--- a/slides/index.html
+++ b/slides/index.html
@@ -5,57 +5,37 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <style>
-            /*
-дополнительные стили:
-внешний вид вы можете изменить по своему усмотрению
-            */
-            .slide {
-                font-size: 40px;
-                padding: 40px;
-                box-sizing: border-box;
-                background: #333;
-                color: #fff;
-            }
-            .slide:nth-of-type(1) {
-                background: red;
-            }
-            .slide:nth-of-type(2) {
-                background: orange;
-            }
-            .slide:nth-of-type(3) {
-                background: green;
-            }
-            .slide:nth-of-type(4) {
-                background: blue;
-            }
-            .slide:nth-of-type(5) {
-                background: purple;
-            }
-        </style>
-    </head>
-    <body>
-        <script language="JavaScript"> 
-var i = 0; var path = new Array(); 
 
-// LIST OF IMAGES 
-path[0] = "1/1.jpg"; 
-path[1] = "1/2.jpg"; 
-path[2] = "1/3.jpg"; 
+<head>
+  <title>Слайды</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
-function swapImage() 
-{ 
-document.slide.src = path[i]; 
-if(i < path.length - 1) i++; 
-else i = 0; 
-setTimeout("swapImage()",3000); 
-} 
-window.onload=swapImage; 
-</script> 
-<img height="200" name="slide" src="image_1.gif" width="400" />
-    </body>
+<body>
+  <script language="JavaScript">
+    var it = 0;
+    var path = new Array();
+    for (var i = 0; i < 10; i++) {
+      path[i] = "1/" + Number(i + 1) + ".jpg";
+    }
+
+    for (var i = 0; i < 9; i++) {
+      path[Number(i + 10)] = "2/" + Number(i + 1) + ".jpg";
+    }
+    for (var i = 0; i < path.length; i++) {
+      console.log("path[" + i + "]   ->   " + path[i]);
+    }
+
+    function swapImage() {
+      setTimeout("swapImage()", 3000);
+      document.slide.src = path[it];
+      if (it < path.length - 1) it++;
+      else it = 0;
+    }
+    window.onload = swapImage;
+  </script>
+  <img name="slide" src="1/1.jpg" width="55%">
+</body>
+
 </html>
