--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+
 <head>
 </head>
 
@@ -6,3 +9,5 @@
     document.location.href = "slides/index.html";
   </script>
 </body>
+
+</html>
